taste the new component framework by toracleinput again again

--- a/components-oracle/src/main/resources/org/talend/components/oracle/messages.properties
+++ b/components-oracle/src/main/resources/org/talend/components/oracle/messages.properties
@@ -5,5 +5,4 @@ property.dbschema.displayName=Schema
 property.jdbcparameter.displayName=Additional JDBC parameters
 property.autocommit.displayName=Auto commit
 
-property.tablename.displayName=Table name
-property.sql.displayName=Query
+property.referencedComponentId.displayName=Use this connection
