--- a/components-oracle/src/main/resources/org/talend/components/oracle/toracleinput/messages.properties
+++ b/components-oracle/src/main/resources/org/talend/components/oracle/toracleinput/messages.properties
@@ -1,8 +1,4 @@
 component.tOracleInputNew.title=Oracle Input
 
-property.host.displayName=Host
-property.port.displayName=Port
-property.database.displayName=Database
-property.dbschema.displayName=Schema
-property.jdbcparameter.displayName=Additional JDBC parameters
-property.autocommit.displayName=Auto commit
+property.tablename.displayName=Table name
+property.sql.displayName=Query
